[Dark mode] Fix table colors in dark mode (#10096)

--- a/src/Bootstrap/less/theme/page-display-package.less
+++ b/src/Bootstrap/less/theme/page-display-package.less
@@ -16,7 +16,7 @@
   }
 
   tr {
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid var(--neutralStroke2Rest);
   }
 
   .package-header {
